03/02/2003 Bob Rossi <bob_rossi@cox.net>

    * Readline has been cleanly added with a pty: Now, cgdb opens a pty,
    tells readline that that is its stdin, it also creates an ordinary pipe to
    read from readline's ouput.

02/26/2003 Bob Rossi <bob_rossi@cox.net>

    * Implemented new changes to the libtgdb interface to support readline:
    cgdb should now be able to send all the data the user typed to tgdb, 
    and tgdb figures out what data to send back and in what order.
    * Fixed crash in cgdb: If user hit ' ' into the cgdb window when there
    was no file selected, cgdb would crash.

02/24/2003 Bob Rossi <bob_rossi@cox.net>

    * Fixed interface between cgdb and tgdb: cgdb gets the prompt from 
    tgdb now instead of guessing its '(gdb) '
    * Fixed readline include problem. stdio.h must be included first

02/23/2003 Bob Rossi <bob_rossi@cox.net>

    * Major re-write, adding readline support: cgdb now uses the readline
    library directly for getting input from the user.


02/16/2003 Bob Rossi <bob_rossi@cox.net>

    * Changed configure file src/Makefile.am: libtgdb is now a single library.

02/12/2003 Bob Rossi <bob_rossi@cox.net>
   
   * Fixed cgdb to interface with new tgdb
   * Removed macro support from cgdb: It was using tgdb's macro
   support which has been removed. The macro support should be done
   from the application level.

02/11/2003 Bob Rossi <bob_rossi@cox.net>
   
   * Added the command to goto a line in the source window: This options was
   present before but it was not picked up by the new command parser.
   * Changed searching keys: the 'n' key to mean 'next forward search' 
   and the 'N' key to mean 'next reverse search'.
   * Changed file buffer key commands: 'b' goes back a file. 'f' goes
   forward a file.
   * Removed the '.' command: It is useless :)

02/05/2003 Peter Kovacs <peter@kovax.org>

    * Integrated new command parser: commands.c now takes care of processing