@@ -1,6 +1,7 @@
 03/02/2003 Bob Rossi <bob_rossi@cox.net>
 
    * readline buffer commands working
+   * Made readline not install any signal handler's
 
 02/27/2003 Bob Rossi <bob_rossi@cox.net>
 
