@@ -3,6 +3,7 @@
     * Readline has been cleanly added with a pty: Now, cgdb opens a pty,
     tells readline that that is its stdin, it also creates an ordinary pipe to
     read from readline's ouput.
+   * Made readline not install any signal handler's
 
 02/26/2003 Bob Rossi <bob_rossi@cox.net>
 
